// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SortIcon /> should render correctly when filtered asc 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    filterDirection="asc"
    isFiltered={true}
    onClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "align": "center",
      "children": Array [
        <ExpandLessIcon
          fill="#38A9DB"
          height={14}
          styles={
                    Object {
                              "marginBottom": -4,
                            }
          }
          width={14}
/>,
        <ExpandMoreIcon
          fill="#323232"
          height={14}
          width={14}
/>,
      ],
      "direction": "column",
      "justify": "center",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "fill": "#38A9DB",
          "height": 14,
          "styles": Object {
            "marginBottom": -4,
          },
          "width": 14,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "fill": "#323232",
          "height": 14,
          "width": 14,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "center",
        "children": Array [
          <ExpandLessIcon
            fill="#38A9DB"
            height={14}
            styles={
                        Object {
                                    "marginBottom": -4,
                                  }
            }
            width={14}
/>,
          <ExpandMoreIcon
            fill="#323232"
            height={14}
            width={14}
/>,
        ],
        "direction": "column",
        "justify": "center",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "#38A9DB",
            "height": 14,
            "styles": Object {
              "marginBottom": -4,
            },
            "width": 14,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "#323232",
            "height": 14,
            "width": 14,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SortIcon /> should render correctly when filtered desc 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    filterDirection="desc"
    isFiltered={true}
    onClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "align": "center",
      "children": Array [
        <ExpandLessIcon
          fill="#323232"
          height={14}
          styles={
                    Object {
                              "marginBottom": -4,
                            }
          }
          width={14}
/>,
        <ExpandMoreIcon
          fill="#38A9DB"
          height={14}
          width={14}
/>,
      ],
      "direction": "column",
      "justify": "center",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "fill": "#323232",
          "height": 14,
          "styles": Object {
            "marginBottom": -4,
          },
          "width": 14,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "fill": "#38A9DB",
          "height": 14,
          "width": 14,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "center",
        "children": Array [
          <ExpandLessIcon
            fill="#323232"
            height={14}
            styles={
                        Object {
                                    "marginBottom": -4,
                                  }
            }
            width={14}
/>,
          <ExpandMoreIcon
            fill="#38A9DB"
            height={14}
            width={14}
/>,
        ],
        "direction": "column",
        "justify": "center",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "#323232",
            "height": 14,
            "styles": Object {
              "marginBottom": -4,
            },
            "width": 14,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "#38A9DB",
            "height": 14,
            "width": 14,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SortIcon /> should render correctly when not filtered 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    filterDirection="asc"
    isFiltered={false}
    onClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "align": "center",
      "children": Array [
        <ExpandLessIcon
          fill="#323232"
          height={14}
          styles={
                    Object {
                              "marginBottom": -4,
                            }
          }
          width={14}
/>,
        <ExpandMoreIcon
          fill="#323232"
          height={14}
          width={14}
/>,
      ],
      "direction": "column",
      "justify": "center",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "fill": "#323232",
          "height": 14,
          "styles": Object {
            "marginBottom": -4,
          },
          "width": 14,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "fill": "#323232",
          "height": 14,
          "width": 14,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": "center",
        "children": Array [
          <ExpandLessIcon
            fill="#323232"
            height={14}
            styles={
                        Object {
                                    "marginBottom": -4,
                                  }
            }
            width={14}
/>,
          <ExpandMoreIcon
            fill="#323232"
            height={14}
            width={14}
/>,
        ],
        "direction": "column",
        "justify": "center",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "#323232",
            "height": 14,
            "styles": Object {
              "marginBottom": -4,
            },
            "width": 14,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "#323232",
            "height": 14,
            "width": 14,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
